Adding team section

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
     
     <div class="about">
         <br>
+        <br><br><br>
         <div class="abouttext">
             <h1>About the company</h1>
             <br>
             <h2>Key features of our company</h2>
+            <br>
             <br>
             <br>
         </div>
@@ -81,10 +83,59 @@
     </div>
     <div class="team">
         <div class="teamtext">
-            
+            <br><br>
+            <h1>The Team</h1>
+            <br><br>
+
         </div>
         <div class="teaminfo">
+            <div>
+                <img src="images/personicon.jpg" class="teamimg">
+                <h2>Name and Surname</h2>
+                <h3>Profession</h3>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p><br>
+                <a href="#" class="teambutton">Contact</a><br><br>
+            </div>
+            <div>
+                <img src="images/personicon.jpg" class="teamimg">
+                <h2>Name and Surname</h2>
+                <h3>Profession</h3>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p><br>
+                <a href="#" class="teambutton">Contact</a><br><br>
+            </div>
+            <div>
+                <img src="images/personicon.jpg" class="teamimg">
+                <h2>Name and Surname</h2>
+                <h3>Profession</h3>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p><br>
+                <a href="#" class="teambutton">Contact</a><br><br>
+            </div>
+            <div>
+                <img src="images/personicon.jpg" class="teamimg">
+                <h2>Name and Surname</h2>
+                <h3>Profession</h3>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p><br>
+                <a href="#" class="teambutton">Contact</a><br><br>
+            </div>
+        </div><br><br><br><br>
+    </div>
 
+    <div class="stats">
+        <div>
+            <h1>14+</h1>
+            <h3>Partners</h3>
+        </div>
+        <div>
+            <h1>55+</h1>
+            <h3>Projects Done</h3>
+        </div>
+        <div>
+            <h1>89+</h1>
+            <h3>Happy Clients</h3>
+        </div>
+        <div>
+            <h1>150+</h1>
+            <h3>Meetings</h3>
         </div>
     </div>
 </body>
