--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BusinessTemp</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Area -->
@@ -18,7 +20,7 @@
             <a href="#team">Team</a>
             <a href="#work">Work</a>
             <a href="#price">Pricing</a>
-            <a>Contact</a>
+            <a href="#contact">Contact</a>
         </div>
     </nav>
     
@@ -276,8 +278,57 @@
 
 
 
-    <div class="contact">
-        
+    <div class="contact"id="contact">
+        <div class="contacttext">
+            <br><br><br>
+            <h1>Contact</h1><br>
+            <p>Let's get in touch. Send us a message</p><br><br><br>
+        </div>
+        <div class="contactinfo">
+            <p><i class="material-icons">place</i>Prishtine, Kosovo</p>
+            <p><i class="material-icons">local_phone</i>Phone: +00 1111111</p>
+            <p><i class="material-icons">local_post_office</i>Email: mail@mail.com</p><br><br>
+        </div>
+        <div class="contactform">
+            <form>
+                <p>
+                    <input type="text" placeholder="Name" required name="Name">
+                </p><br>
+                <p>
+                    <input type="text" placeholder="Email" required name="Email">
+                </p><br>
+                <p>
+                    <input type="text" placeholder="Subject" required name="Subject">
+                </p><br>
+                <p>
+                    <input type="text" placeholder="Message" required name="Message">
+                </p><br>
+                <p>
+                    <button type="submit">Send Message</button>
+                </p><br><br>
+            </form>
+        </div>
     </div>
+
+
+
+
+
+    <!--FOOTER-->
+
+
+
+
+    <footer>
+        <div class="footertext">
+            <br>
+            <a href="#hero">Go to top</a><br><br>
+            <h2>Made by:Besnik Beka</h2>
+            <p>Email: besnikbeka2001@gmail.com</p>
+            <br>
+        </div>
+    </footer>
+
+
 </body>
 </html>
